--- a/src/app.css
+++ b/src/app.css
@@ -355,7 +355,7 @@ section {
 }
 .row-space-start {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     align-content: center;
     justify-content: start;
     width: 100%;
