updating email next-test-validation status

--- a/static/email/email-invite-back.hbs
+++ b/static/email/email-invite-back.hbs
@@ -85,7 +85,7 @@
                                 align-items: center;
                                 margin: 0;
                                 color: #000000;'>
-                        {{fileUserData.userUID}}
+                        {{userUID}}
                     </h1>
                 </div>
             </td>
