--- a/static/email/email-invite-back.hbs
+++ b/static/email/email-invite-back.hbs
@@ -71,13 +71,25 @@
         </tr>
 
         <tr>
-            <td style="padding: 0 20px; text-align: -webkit-center;">
-                <div style="background: #F8F7F7;
+            <td 
+                style="padding: 0 20px; text-align: -webkit-center;">
+                <div 
+                    style="background: #F8F7F7;
                             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                             border-radius: 5px;
                             width: fit-content;
                             padding: 15px 25px;">
-                    <h1 style='font-style: normal;
+                    <p 
+                        style='font-style: normal;
+                                font-weight: normal;
+                                font-size: 28.875px;
+                                line-height: 35px;
+                                display: flex;
+                                align-items: center;
+                                margin: 0;
+                                color: #000000;'>Your User UID</p>
+                    <p 
+                        style='font-style: normal;
                                 font-weight: normal;
                                 font-size: 28.875px;
                                 line-height: 35px;
@@ -85,8 +97,8 @@
                                 align-items: center;
                                 margin: 0;
                                 color: #000000;'>
-                        {{userUID}}
-                    </h1>
+                         {{userUID}}
+                    </p>
                 </div>
             </td>
         </tr>
