--- a/src/app.css
+++ b/src/app.css
@@ -20,7 +20,7 @@
 body,
 html {
     margin: 0 !important;
-    background-color: var(--white);
+    /* background-color: var(--white); */
     scroll-behavior: smooth !important;
 }
 
@@ -37,7 +37,7 @@ h6 {
 
 body {
     color: var(--white);
-    background-color: var(--dark);
+    /* background-color: var(--dark); */
     margin: 0 !important;
     font-family: Roboto;
     font-size: 14px;
