updating email template send layout

--- a/static/email/email-invite-back.hbs
+++ b/static/email/email-invite-back.hbs
@@ -71,6 +71,24 @@
         </tr>
 
         <tr>
+            <td style="padding: 0 20px;">
+                <p style="font-size: 14px;
+                    color: #37474F;">
+                    Please access the Starbased website using the same laptop device as you have used in the previous tests.                
+                </p>
+            </td>
+        </tr>
+
+        <tr>
+            <td style="padding: 0 20px;">
+                <p style="font-size: 14px;
+                    color: #37474F;">
+                    If you do not have access to the previous desktop browser you used for the test, use the account icon on the page to login using your User UID or Email                
+                </p>
+            </td>
+        </tr>
+
+        <tr>
             <td 
                 style="padding: 0 20px; text-align: -webkit-center;">
                 <div 
