--- a/static/email/email-invite-back.hbs
+++ b/static/email/email-invite-back.hbs
@@ -83,7 +83,7 @@
             <td style="padding: 0 20px;">
                 <p style="font-size: 14px;
                     color: #37474F;">
-                    If you do not have access to the previous desktop browser you used for the test, use the account icon on the page to login using your User UID or Email                
+                    If you do not have access to the previous desktop browser you used for the test, use the account icon on the page to login using your <b> User UID </b>        
                 </p>
             </td>
         </tr>
