pulsating red focus help-btn visiblity

--- a/src/app.css
+++ b/src/app.css
@@ -540,3 +540,26 @@ input:focus {
     padding: 5px;
     border: 2.5px solid #FF5555;
 }
+
+/* ... pulsating button ... */
+
+.help-button-pulsate {
+  background-color: rgb(255, 0, 0);
+  box-shadow: 0 0 0 0 rgb(255, 0, 0);
+  animation: pulse-red 1s infinite;
+}
+    
+@keyframes pulse-red {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgb(255, 0, 0);
+  }
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+  }
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+  }
+}
